--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "clarifai": "^2.9.1",
     "cors": "^2.8.5",
     "cross-fetch": "^3.1.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "knex": "^2.3.0",
     "pg": "^8.8.0"
